:lipstick: Fix: card top value alignment

--- a/src/client/styles/components/card.less
+++ b/src/client/styles/components/card.less
@@ -25,12 +25,13 @@
     font-weight: bold;
 }
 
-.card__value--top,
-.card__malus {
+.card__value--top {
     flex: 1;
+    text-align: left;
 }
 
 .card__malus {
+    flex: 1;
     text-align: right;
 }
 
@@ -56,5 +57,4 @@
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
     text-shadow: 3px 3px 0 #fff;
-
 }
